# bosua-utility-rust

./: .gitignore  Cargo.toml  Makefile
crates/bosua-lib/: Cargo.toml
crates/bosua-lib/src/: lib.rs
crates/bosua-lib/src/cli/: mod.rs  registry.rs
crates/bosua-lib/src/cloud/: account_manager.rs  aws.rs  cloudflare.rs  fshare.rs  gcp.rs  gdrive.rs  mod.rs  tailscale.rs
crates/bosua-lib/src/commands/: araxis.rs  aria2_cmd.rs  aws.rs  bitcoin.rs  checksum.rs  cloud.rs  cloudflare.rs  config_cmd.rs  cron.rs  crx.rs  daemon.rs  detect.rs  download.rs  fshare.rs  fshare_scan.rs  gcloud.rs  gcp.rs  gdrive.rs  gdrive_sync.rs  info.rs  ip.rs  latex2pdf.rs  latex2typst.rs  mac.rs  md2pdf.rs  medium.rs  memprofile.rs  mod.rs  ocr.rs  onflix.rs  play.rs  proxy.rs  registry_cmd.rs  scraper_api.rs  search.rs  serve.rs  sms_activate.rs  tailscale.rs  testmail.rs  version.rs  (+2 more)
crates/bosua-lib/src/config/: dynamic.rs  manager.rs  mod.rs  simplified.rs
crates/bosua-lib/src/crypto/: mod.rs
crates/bosua-lib/src/daemon/: cron.rs  mod.rs
crates/bosua-lib/src/download/: aria2.rs  mod.rs
crates/bosua-lib/src/errors/: mod.rs
crates/bosua-lib/src/fileops/: lock.rs  mod.rs
crates/bosua-lib/src/http_client/: mod.rs
crates/bosua-lib/src/json/: mod.rs
crates/bosua-lib/src/logger/: mod.rs
crates/bosua-lib/src/notifications/: mod.rs
crates/bosua-lib/src/output/: mod.rs  progress.rs
crates/bosua-lib/src/platform/: mod.rs
crates/bosua-lib/src/search/: mod.rs
crates/bosua-lib/src/server/: config.rs  handlers.rs  middleware.rs  mod.rs  sse.rs  tls.rs
crates/bosua-lib/src/signal/: mod.rs
crates/bosua-lib/src/text/: mod.rs
crates/bosua-lib/src/tui/: mod.rs
crates/bosua-lib/src/utils/: browser.rs  country.rs  html.rs  mod.rs  pdf.rs  sanitize.rs  sftp.rs  telegram.rs
crates/bosua-linux/: Cargo.toml
crates/bosua-linux-gcp/: Cargo.toml
crates/bosua-linux-gcp/src/: main.rs
crates/bosua-linux/src/: main.rs
crates/bosua-macos/: Cargo.toml
crates/bosua-macos/src/: main.rs
deploy/: bosua.service
docker/: Dockerfile.amd64  Dockerfile.arm64
